# overengineered

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  diesel.toml  docker-compose.yml  steps.md
database/: data.sql  schema.sql
database/migrations/2023-05-13-123723_create_users/: up.sql
go_rpc_server/: Dockerfile  go.mod  main.go  random.go  rpc_methods.go  stocks.go  unary.go
go_rpc_server/file_server/: grpc.pb.go  grpc_grpc.pb.go
go_rpc_server/market/: stocks.pb.go  stocks_grpc.pb.go
go_rpc_server/messenger/: grpc.pb.go  grpc_grpc.pb.go
go_rpc_server/words/: words.pb.go  words_grpc.pb.go
proto/: grpc.proto  stocks.proto  words.proto
src/: config.rs  main.rs  schema.rs
stream-processor/: .dockerignore  .gitignore  Dockerfile  build.sbt
stream-processor/project/: plugins.sbt
ui/: next.config.js  package.json
ui/components/: login.js
webserver/: .dockerignore  Cargo.toml  Dockerfile  build.rs  config.docker.json  config.json
webserver/src/: _config.rs  canvas.rs  config.rs  db.rs  file_server.rs  kafka.rs  letters.rs  main.rs  models.rs  route_websocket.rs  routes.rs  rpc.rs  rpc_impl.rs  schema.rs  stocks_rpc.rs  words_rpc.rs  words_rpc_impl.rs
webserver/src/actors/: consumer.rs  leader.rs  mod.rs  producer.rs  stats.rs
webserver/src/protos/: messenger.rs
webserver/ui/: next.config.js  package-lock.json  package.json
webserver/ui/pages/: dashboard.js  index.js
webserver/ui/src/app/: Form.js  Grid.js  GridContext.js  Pixel.js  Tile.js  canvas.js  globals.css  letters.js  page.js  utils.js  websokcet.js
(+1 files in other folders)
