[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
config = "0.13.1"
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.4", features = ["mysql", "chrono", "r2d2"] }
log = "0.4"
env_logger = "0.10.0"
tonic = "0.9.2"
prost = "0.11.9"
rand = "0.8.5"
# requires cmake. brew install cmake
# rdkafka = { version = "0.25", features = ["cmake-build"] }
rdkafka = { version = "0.31.0" }
rdkafka-sys = "4.4.0+1.9.2"



[build-dependencies]
tonic-build = "0.9.2"